fix panel spacing

--- a/src/sass/stylesheet.sass
+++ b/src/sass/stylesheet.sass
@@ -59,8 +59,11 @@
         background-image: url('assets/maximize-active.svg')
 
   #appMenu
-    margin-left: .5em
-    margin-right: .5em
+    margin-left: 10px
+    margin-right: 5px
+
+    .popup-menu-arrow
+      margin-left: 5px
 
   #panelActivities
     width: 55px
